храним адрес группы в конфиге nginx (так оптимальнее выходит)

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,6 @@
     <title>Вавилова, 15</title>
 </head>
 <body>
-    <p>Тут будет что-нибудь полезное, а пока присоединяйтесь <a href="<!--# include file=".group_address" -->">к нашей группе в WhatsApp</a>.</p>
+    <p>Тут будет что-нибудь полезное, а пока присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>.</p>
 </body>
 </html>
