делаем на мобильных текст покрупнее

--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Вавилова, 15</title>
+    <style>
+    @media (min-resolution: 150dpi) {
+        body {
+            font-size: 2em;
+        }
+    }
+        
+    body {
+        margin: 0;
+        padding: 0.5em;
+    }
+    </style>
 </head>
 <body>
+    <h2>Гаражный комплекс на Вавилова, 15</h2>
     <p>Тут будет что-нибудь полезное, а пока присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>.</p>
 </body>
 </html>
