new: интересные факты + фоточка зимой

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,28 @@
 </head>
 <body>
     <h2>Гаражный комплекс на Вавилова, 15</h2>
-    <p>Тут будет что-нибудь полезное, а пока присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>.</p>
+    <p><img src="photo.jpg" alt="Гаражи зимой" /></p>
+
+    <h3>Интересные факты</h3>
+    <h4>Как платить за электричество?</h4>
+    <p>Раз в три месяца специальный человек обзванивает всех и собирает платежи. Тариф на электроэнергию полный,
+        3,66 руб/кВт*ч.</p>
+
+    <h4>Чистят ли снег?</h4>
+    <p>Да, снег чистят владельцы переднеприводных автомобилей. Так, заехать в горку между первым и вторым этажом после
+        снегопада не насилуя автомобиль достаточно сложно (субъективное мнение). Лопата станет вашим лучшим помощником.</p>
+
+    <h4>Сыро ли на первом этаже?</h4>
+    <p>Это зависит от положения бокса в линейке. В данный момент на крыше не установлены водосточные желоба, и вся вода
+        в дождь течёт сквозь просевшую отмостку прямо под гараж. На бетонных блоках внешней стены, находящихся ниже
+        уровня земли, образуется плесень.</p>
+    <p>В тёплое время года периодически включаются вентиляторы принудительной вытяжки.</p>
+
+    <h4>Как оно вообще по ощущениям?</h4>
+    <p>В общем-то отличное местечко, и недалеко от жилья!</p>
+
+    <h3>Остались вопросы?</h3>
+    <p>Присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>, там
+        вам обязательно ответят.</p>
 </body>
 </html>
