--- a/www/index.html
+++ b/www/index.html
@@ -36,10 +36,11 @@
     <p>В тёплое время года периодически включаются вентиляторы принудительной вытяжки.</p>
 
     <h4>Как оно вообще по ощущениям?</h4>
-    <p>В общем-то отличное местечко, и недалеко от жилья!</p>
+    <p>При должном обслуживании будет в общем-то отличное местечко, и недалеко от жилья! Хорошо, если владельцы станут 
+        более организованными, и сообща будут решать вопросы по хозяйству, просто потому, что кому ещё это надо?</p>
 
     <h3>Остались вопросы?</h3>
-    <p>Присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>, там
-        вам обязательно ответят.</p>
+    <p>Если вы знаете другие интересные факты, имеете вопросы или просто хотите пообщаться, 
+        присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>, там вам обязательно ответят.</p>
 </body>
 </html>
