--- a/www/index.html
+++ b/www/index.html
@@ -14,33 +14,40 @@
         margin: 0;
         padding: 0.5em;
     }
+
+    .nope {
+        text-decoration: line-through;
+    }
     </style>
 </head>
 <body>
-    <h2>Гаражный комплекс на Вавилова, 15</h2>
-    <p><img src="photo.jpg" alt="Гаражи зимой" /></p>
+<h2>Гаражный комплекс на Вавилова, 15</h2>
+<p><img src="photo.jpg" alt="Гаражи зимой"/></p>
 
-    <h3>Интересные факты</h3>
-    <h4>Как платить за электричество?</h4>
-    <p>Раз в три месяца специальный человек обзванивает всех и собирает платежи. Тариф на электроэнергию полный,
-        3,66 руб/кВт*ч.</p>
+<h3>Интересные факты</h3>
+<h4>Как платить за электричество?</h4>
+<p><span class="nope">Раз в три месяца специальный человек обзванивает всех и собирает платежи.</span> Прошло уже
+    полгода, а автору этих строк никто ни разу не позвонил. Кстати, тариф на электроэнергию полный — в отличие от тарифа
+    для квартир с электрическими плитами.</p>
 
-    <h4>Чистят ли снег?</h4>
-    <p>Да, снег чистят владельцы переднеприводных автомобилей. Так, заехать в горку между первым и вторым этажом после
-        снегопада не насилуя автомобиль достаточно сложно (субъективное мнение). Лопата станет вашим лучшим помощником.</p>
+<h4>Чистят ли снег?</h4>
+<p>Да, снег чистят владельцы переднеприводных автомобилей. Так, заехать в горку между первым и вторым этажом после
+    снегопада не насилуя автомобиль достаточно сложно (субъективное мнение). Лопата станет вашим лучшим помощником.</p>
 
-    <h4>Сыро ли на первом этаже?</h4>
-    <p>Это зависит от положения бокса в линейке. В данный момент на крыше не установлены водосточные желоба, и вся вода
-        в дождь течёт сквозь просевшую отмостку прямо под гараж. На бетонных блоках внешней стены, находящихся ниже
-        уровня земли, образуется плесень.</p>
-    <p>В тёплое время года периодически включаются вентиляторы принудительной вытяжки.</p>
+<h4>Сыро ли на первом этаже?</h4>
+<p>Это зависит от положения бокса в линейке. В данный момент на крыше не установлены водосточные желоба, и вся вода в
+    дождь течёт сквозь просевшую отмостку прямо под гараж. Внутри бокса на бетонных блоках внешней стены, находящихся
+    ниже уровня земли, образуется плесень. В межсезонье на полу в боксе могут образовываться небольшие лужи, но,
+    впрочем, высыхают они быстро.</p>
+<p>В тёплое время года периодически включают вентиляторы принудительной вытяжки. На первом этаже для пущей вентиляции
+    проезд закрывают решёткой вместо сплошных ворот.</p>
 
-    <h4>Как оно вообще по ощущениям?</h4>
-    <p>При должном обслуживании будет в общем-то отличное местечко, и недалеко от жилья! Хорошо, если владельцы станут 
-        более организованными, и сообща будут решать вопросы по хозяйству, просто потому, что кому ещё это надо?</p>
+<h4>Как оно вообще по ощущениям?</h4>
+<p>В общем-то отличное местечко, и недалеко от жилья. Строение и прилегающие террритории, однако, постепенно ветшают и
+    требуют внимания, но заняться проблемами как будто бы и некому.</p>
 
-    <h3>Остались вопросы?</h3>
-    <p>Если вы знаете другие интересные факты, имеете вопросы или просто хотите пообщаться, 
-        присоединяйтесь <a href="<!--# echo var="group_address" -->">к нашей группе в WhatsApp</a>, там вам обязательно ответят.</p>
+<h3>Остались вопросы?</h3>
+<p>Если вы знаете другие интересные факты, имеете вопросы или просто хотите пообщаться, присоединяйтесь <a
+        href="<!--# echo var=" group_address" -->">к нашей группе в WhatsApp</a>, там вам обязательно ответят.</p>
 </body>
 </html>
